# RoutePlanning

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: dependabot.yml
Arlo_2dnav/: CMakeLists.txt  package.xml
Arlo_2dnav/launch/: Arlo_configuration.launch
Documentation/bachelor thesis lukas/: 65283 Bachelor Thesis Lukas Schwörer.tex  Abstract.tex  AppendixAdditionalTopics.tex  AppendixCharts.tex  AppendixListOfCompanies.tex  AppendixNetwork.tex  AppendixSourceCode.tex  Conclusion.tex  Experimental.tex  Introduction.tex  Kurzfassung.tex  Outlook.tex  Preface.tex  ResultDiscussion.tex  Theoretical_Background.tex
Documentation/bachelor thesis tristan/: .gitignore  71336 Bachelor Thesis Tristan Schwörer.tex  Abstract.tex  Acknowledgement.tex  AppendixAdditionalTopics.tex  AppendixSourceCode.tex  Concept.tex  Conclusion.tex  ConfigurationTesting.tex  EidesVers.tex  Experimental.tex  HardwareSoftware.tex  Introduction.tex  Kurzfassung.tex  Limitations.tex  Outlook.tex  Preface.tex  RelatedWork.tex  ResultDiscussion.tex  Selection.tex  Theoretical_Background.tex  TitlePage.tex  literatur.bib  ~$Bachelorarbeit_Präsentation.pptx
Documentation/bachelor thesis tristan/Tables/: FocusAbs.csv  TransmissionData.csv
Simulation/: CMakeLists.txt  package.xml
Simulation/gazebo_models/GroundPlane50x50/: model.config  model.sdf
Simulation/gazebo_models/Track_90/: model.config  model.sdf
Simulation/gazebo_models/Track_Loop/: model.config  model.sdf
Simulation/gazebo_models/Track_wide/: model.config  model.sdf
Simulation/gazebo_models/circle_w/: model.config  model.sdf
Simulation/gazebo_models/circlefromobj/: model.config  model.sdf
Simulation/gazebo_models/moin/: model.config  model.sdf
Simulation/launch/: Arlo.launch  Arlo_costmap.launch  Simulation_rviz_config.rviz  arlo_gmapping.launch  cartographer.launch  my_world.launch  my_world2.launch
Simulation/meshes/BlenderData/: GroundPlane50x50.dae  Track_Loop.dae
Simulation/params/: Arlo_costmap_params.yaml  arlo.lua
Simulation/urdf/: arlo.urdf.xacro  arlo_2stack.urdf.xacro  arlo_stack.urdf.xacro  arlobot.gazebo  arlobot_gazebo.urdf.xacro  asus_xtion_pro.urdf.xacro  camera.urdf.xacro  common_default.urdf.xacro  hokuyo.xacro  imu.urdf.xacro  lidar.urdf.xacro
Simulation/world/: empty_world.world  wide_track.world
arlo_navigation/: CMakeLists.txt  package.xml  rqt_multiplot.xml
arlo_navigation/cfg/: markfreespace.cfg  posefinder.cfg  progressivelayer.cfg
arlo_navigation/config/: base_global_planner.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa.yaml  ekf_encoder_odom_imu.yaml  ekf_template.yaml  global_costmap_params.yaml  local_costmap_params.yaml  recovery_params.yaml
arlo_navigation/launch/: laser_filter.launch  robot_localization.launch
arlo_navigation/src/: markfreespace.cpp  posefinder.cpp  radialposefinder.cpp  tester.cpp
arlo_navigation/srv/: clearleftlane.srv  goalnotfound.srv
first_test/: CMakeLists.txt  package.xml
first_test/src/: createobstacles.cpp
learning_tf/: CMakeLists.txt  package.xml
learning_tf/launch/: start_demo.launch
learning_tf/src/: frame_tf_broadcaster.cpp  turtle_tf_listener.cpp
simple_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
simple_layers/cfg/: ProgressiveLayer.cfg  config.cfg
simple_layers/include/simple_layers/: mylayer.h
simple_layers/src/: mylayer.cpp
simple_layers/srv/: reset.srv
